Fixed login on mobile bug where text would be invisible and added a message about an error that could occur on verification process

--- a/css/master.css
+++ b/css/master.css
@@ -189,6 +189,7 @@ main {
   }
   .header-login input {
     font-size: 20px;
+    color: #000;
   }
   .header-login a {
     border: solid;
